updating assignment 1 and lesson 2

--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -150,12 +150,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 1,
    "id": "cb018e25-1199-417e-8538-7cc4b7506eae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "few_number = [25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, \n",
+    "few_number2 = [25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, \n",
     "              60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94,\n",
     "              95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105]\n",
     "              "
@@ -163,17 +163,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 2,
    "id": "d9473483-f941-40da-8bb2-429e4a4bb52d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "few_number.sort(reverse=True)"
+    "few_number2.sort(reverse=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 3,
    "id": "56c34715-83f6-4ab0-a523-7ef7ae2f2e87",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
     }
    ],
    "source": [
-    "print(few_number)"
+    "print(few_number2)"
    ]
   },
   {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 4,
    "id": "3579c5e7-3c0c-42cc-a5c7-3c111b8ce9d5",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
     }
    ],
    "source": [
-    "print(few_number[-1])"
+    "print(few_number2[-1])"
    ]
   },
   {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 1,
    "id": "a469d798-00f3-4736-a4ad-662aaaab2a79",
    "metadata": {},
    "outputs": [],
