--- a/lesson_2.ipynb
+++ b/lesson_2.ipynb
@@ -1068,9 +1068,695 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2e09cf2-9214-4424-b6ce-1b2683b67645",
+   "metadata": {},
+   "source": [
+    "#### Dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2777a575-a29b-4313-9da1-6309affdc044",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "basic_dict = {\"name\": \"mayowa\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3add7e68-fec9-493d-8396-89ffa6bd8263",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yinka_data = {\"name\": \"yinka\", \"age\": 16, \"is_student\": True, \"gender\": \"female\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5708d684-367b-4d07-a467-c3636af08b4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'yinka', 'age': 16, 'is_student': True, 'gender': 'female'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(yinka_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1cb373bf-7930-4e08-939d-c14a22aed7da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(yinka_data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4258f6e5-da0f-4683-a1cf-720f41c4f307",
+   "metadata": {},
+   "source": [
+    "#### Retrieving dictionary values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "15f0948f-f051-4462-8892-ba07a5e3f456",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(yinka_data[\"age\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4726a489-2c5a-4193-9f6c-b9f913bc1e27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "female\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(yinka_data[\"gender\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "41e8459d-8f76-44a2-a5ee-8808bfc7878b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yinka_data = {\"name\": \"yinka\", \"age\": 16, \"is_student\": True, \"gender\": \"female\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "79c8e9fa-8171-40bd-a0c5-c19db52e2c35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yinka\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(yinka_data[\"name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7f3381cb-5b5d-4e8f-8f11-4c1d9bcbb1e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(yinka_data[\"name\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4976b2c1-9c18-4e0e-88cf-a35ae82e0e9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'My name is yinka, i am 16 years old, i am currently a student is true about me and i belong to female gender'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(\"My name is yinka, i am 16 years old, i am currently a student is true about me and i belong to female gender\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "715bad2b-64dd-43c7-9350-ada1d3a01537",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is yinka, i am 16 years old,i am currently a student is True about me and i belong to female gender\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"My name is {yinka_data['name']}, i am {yinka_data['age']} years old,\\\n",
+    "i am currently a student is {yinka_data['is_student']} about me \\\n",
+    "and i belong to {yinka_data['gender']} gender\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e5e90c21-ea55-464a-b948-4096b8029d90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = {\"maths\": 24, \"english\": 40}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a51df910-dee4-4b5c-be1e-412db1fdb27d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(score[\"english\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "87e91f30-8d61-441c-9e12-b4f6f5ca77d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(score[\"english\"]// 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c796be27-1f60-4360-922d-3edb351e1bf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_score = round(score[\"english\"] / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "62b15533-f303-4738-b982-d5bf8edc5d93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(new_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "14894d2e-ee1a-4b3b-9712-22546fff1a83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = {\"maths\": 24, \"english\": 40}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9120ba9b-f4dd-4470-b819-9af5dc025bd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 1) (913385527.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[25], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(score[\"mathss]\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(score[\"mathss]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "bb6ff4b2-c99f-434a-ae38-3715083cfeb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get () method\n",
+    "print(score.get(\"maths\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "62977a1e-c33a-43a6-8de1-f051956f974e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(score.get(\"literature\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f0c9d83b-3e19-41be-b220-efcbe60bfc68",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'dict' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[29], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mscore\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mliterature\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'dict' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "print(score(\"literature\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "98f23af7-3899-4ee4-8e03-6839788f0b45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = {\"maths\": 24, \"english\": 40}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "14edeb22-a021-4ca4-92b1-ab4c02ff51e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(score.get(\"maths\", 34))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "99b2d67b-f4ec-4947-80d7-0861fcf1db73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students = {\"mayowa\": 22, \"chinyere\": 11, \"segun\": 23}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "97de7c86-edbb-45b1-b155-f9522276c318",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(students.get(\"chinyere\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "11a8c52b-0999-4623-8d2d-a186fb7d73fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(students.get(\"segun\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "dc0f8644-aaed-481b-9be1-ee52b4a5c68f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(students.get(\"22\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "341ffd6e-a5e6-41eb-897d-1e3512858e99",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'22'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[36], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mstudents\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m22\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: '22'"
+     ]
+    }
+   ],
+   "source": [
+    "print(students[\"22\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "0550da75-bc82-4934-9c86-dd60d081edec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students = {\"mayowa\": 22, \"chinyere\": 11, \"segun\": 23}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "19705eaa-adff-4b1b-8c61-8fc824e9df47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(students))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "539a1071-0bee-46d3-8735-137b51584ca8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['mayowa', 'chinyere', 'segun'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(students.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "0ee39db9-c2ee-4adf-99e8-555ad8a5310c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values([22, 11, 23])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(students.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "78440ea1-24b5-4733-a8e0-5167340758d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('mayowa', 22), ('chinyere', 11), ('segun', 23)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(students.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "dae26080-0048-40a0-86b0-41eab578db97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students = {\"mayowa\": 22, \"chinyere\": 11, \"segun\": 23}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "445d747d-3535-4ad5-bc77-64b136c349c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students[\"mayowa\"] = 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "ca0898be-1116-4163-a689-6047158b7810",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mayowa': 50, 'chinyere': 11, 'segun': 23}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "af7021ee-27d1-41ac-9901-7604926a06f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students[\"segun\"] = \"boy\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "33cd38de-b7f0-42dc-85df-638c4f621650",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mayowa': 50, 'chinyere': 11, 'segun': 'boy'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "9f5f3f2f-0cbd-4941-8cf7-c23fdc78be8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students.update({\"chukwu\": 24})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "7272cb78-382d-4c15-b80b-44bda8fc06f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mayowa': 50, 'chinyere': 11, 'segun': 'boy', 'chukwu': 24}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "5fc290f7-ed81-4975-978a-3b64aaddcece",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "students.pop(\"chinyere\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "8f0f4739-6143-41cc-a08d-d29a7dc02d1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mayowa': 50, 'segun': 'boy', 'chukwu': 24}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(students)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4f4a385-7946-4bd0-8b40-56f6f4b6052e",
+   "id": "42b1121f-138c-4701-8dec-3c36f5f76b5c",
    "metadata": {},
    "outputs": [],
    "source": []
