--- a/Lesson_3.ipynb
+++ b/Lesson_3.ipynb
@@ -341,8 +341,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "24f6d004-f28b-4b9d-8632-5a27b515fd52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome to this movie website,\n",
+      "please this movie contain some abusive language,\n",
+      "you need to be older than 18, please parental guide is advised.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How old are you:  20\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "checking customer age for eligibility, hold on a sec\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'>=' not supported between instances of 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 9\u001b[0m\n\u001b[1;32m      5\u001b[0m customer_age \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHow old are you: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mchecking customer age for eligibility, hold on a sec\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mcustomer_age\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m18\u001b[39;49m:\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwelcome, you are eligible to watch this movie\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mTypeError\u001b[0m: '>=' not supported between instances of 'str' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\"\"welcome to this movie website,\n",
+    "please this movie contain some abusive language,\n",
+    "you need to be older than 18, please parental guide is advised.\"\"\")\n",
+    "\n",
+    "customer_age = input(\"How old are you: \")\n",
+    "\n",
+    "print(\"checking customer age for eligibility, hold on a sec\")\n",
+    "\n",
+    "if customer_age >= 18:\n",
+    "    print(\"welcome, you are eligible to watch this movie\")\n",
+    "else:\n",
+    "    print(\"please, you are to young to watch this movie\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "638773f4-388b-47ac-bc73-fed0490c68eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome to this movie website,\n",
+      "please this movie contain some abusive language,\n",
+      "you need to be older than 18, please parental guide is advised.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How old are you:  20\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "checking customer age for eligibility, hold on a sec\n",
+      "welcome, you are eligible to watch this movie\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\"\"welcome to this movie website,\n",
+    "please this movie contain some abusive language,\n",
+    "you need to be older than 18, please parental guide is advised.\"\"\")\n",
+    "\n",
+    "customer_age = int(input(\"How old are you: \"))\n",
+    "\n",
+    "print(\"checking customer age for eligibility, hold on a sec\")\n",
+    "\n",
+    "if customer_age >= 18:\n",
+    "    print(\"welcome, you are eligible to watch this movie\")\n",
+    "else:\n",
+    "    print(\"please, you are to young to watch this movie\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98bd75c6-4bf0-4c97-9101-15f96fcd9354",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0afa9d81-620f-4dbb-a444-9495f2cb5272",
+   "metadata": {},
+   "source": [
+    "## GUESSING GAME SYSTEM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a970899c-b643-4a4c-9d26-5cd6254c7614",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "what is your name:  yinka\n",
+      "Please provide your magic number:  66\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Please Wait and see if you have the lucky number\n",
+      "Hooray, yinka just won a jackpot!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import random\n",
+    "\n",
+    "actual_magic_number = 66\n",
+    "\n",
+    "first_name = input (\"what is your name: \")\n",
+    "\n",
+    "user_magic_number = int(input(\"Please provide your magic number: \"))\n",
+    "\n",
+    "print(\" Please Wait and see if you have the lucky number\")\n",
+    "\n",
+    "if user_magic_number == actual_magic_number:\n",
+    "    print(f\"Hooray, {first_name} just won a jackpot!!!\")\n",
+    "else:\n",
+    "    print(f\"Oops, wrong magic number {first_name}, Try again later\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e01e31b9-cb40-4028-91be-c6412d4c053a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "71e94443-0ffc-474d-abff-8ebaffdd2ade",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(random.randint(5, 8)) #this is to generate random numbers between 5 and 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1e75bb9c-d198-4198-b221-cf0a13ca34c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "79a6d7ec-ed98-4e5c-b856-96709d3f644a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "what is your name:  yinka\n",
+      "Please provide your magic number:  9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Please Wait and see if you have the lucky number\n",
+      "Oops, wrong magic number yinka, the correct magic number is 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "actual_magic_number = random.randint(1, 100)\n",
+    "\n",
+    "first_name = input (\"what is your name: \")\n",
+    "\n",
+    "user_magic_number = int(input(\"Please provide your magic number: \"))\n",
+    "\n",
+    "print(\" Please Wait and see if you have the lucky number\")\n",
+    "\n",
+    "time.sleep(3)\n",
+    "\n",
+    "if user_magic_number == actual_magic_number:\n",
+    "    print(f\"Congratulations {first_name}, the magic number is {actual_magic_number}, just won a jackpot!!!\")\n",
+    "else:\n",
+    "    print(f\"Oops, wrong magic number {first_name}, the correct magic number is {actual_magic_number}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f23ba22-2648-4276-9368-feea9520a5ae",
    "metadata": {},
    "outputs": [],
    "source": []
