updated lesson 3 class with loop

--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -222,8 +222,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "815eb7d5-cf85-4833-872b-2f48aaee1a5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#assignment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fb0829e-b95f-41d9-ae47-a91291047e37",
    "metadata": {},
    "outputs": [],
    "source": []
