--- a/lesson_1.ipynb
+++ b/lesson_1.ipynb
@@ -1414,8 +1414,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7f765ee1-fae8-4504-b367-ddb81ce2d1d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#end of lesson 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a24e394-9908-4f72-8955-f9ec6d589345",
    "metadata": {},
    "outputs": [],
    "source": []
