--- a/Lesson_3.ipynb
+++ b/Lesson_3.ipynb
@@ -562,7 +562,7 @@
    "source": [
     "actual_magic_number = random.randint(1, 100)\n",
     "\n",
-    "first_name = input (\"what is your name: \")\n",
+    "first_name = input (\"what is your name:  \")\n",
     "\n",
     "user_magic_number = int(input(\"Please provide your magic number: \"))\n",
     "\n",
@@ -580,6 +580,432 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0f23ba22-2648-4276-9368-feea9520a5ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "092a4a96-f797-4860-a8f7-91dbdd911446",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"mayowa\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e909bc01-3be9-4eba-98a1-7656e31fd93e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name starts with m\n"
+     ]
+    }
+   ],
+   "source": [
+    "if name.startswith(\"m\"):\n",
+    "    print(\"The name starts with m\")\n",
+    "else:\n",
+    "    print(\"The name does not starts with m\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "743711fe-b5f8-4cd7-92b9-86726ccc8603",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name starts with m\n"
+     ]
+    }
+   ],
+   "source": [
+    "if name[0] == \"m\":\n",
+    "    print(\"The name starts with m\")\n",
+    "else:\n",
+    "    print(\"The name does not start with m\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce754c68-5bc5-47ee-aaa2-ee8885abcdaa",
+   "metadata": {},
+   "source": [
+    "### Navigation system"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e60c9baa-14f1-4360-8806-716ddd696570",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normal_commute_time = 30\n",
+    "\n",
+    "is_raining = True\n",
+    "\n",
+    "is_traffic = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c75143fe-69ea-4f01-acb8-2c8f64a94674",
+   "metadata": {},
+   "source": [
+    "## For loop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "146c3e6d-5883-44c3-9c79-f075b5b13ad1",
+   "metadata": {},
+   "source": [
+    " This is a concept in python, that allows us to iterate/go-over a sequence like list, tuple, dictionary, string\n",
+    "and set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "70a4d5ac-855c-4753-8edc-5db3a7819564",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students = [\"mayowa\", \"amanda\", \"segun\", \"jekwu\", \"yinka\",\"chinyere\", \"joachim\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bbe70f71-36b4-4790-a2bf-dea6c0f9fc28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mayowa\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(students[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "04928b4b-4144-4091-b5bb-15629ca415a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "amanda\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(students[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "571ff325-a8ae-4019-8c4b-146561b37459",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mayowa\n",
+      "amanda\n",
+      "segun\n",
+      "jekwu\n",
+      "yinka\n",
+      "chinyere\n",
+      "joachim\n"
+     ]
+    }
+   ],
+   "source": [
+    "for names in students:\n",
+    "    print(names) #the way it is listing or going to next line is called indentation\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8c948b77-9410-4e7c-873c-af70ef6532b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "6\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "8\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "for names in students:\n",
+    "    print(len(names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ad2fb5ef-6a58-49ad-b166-837a52a6cc1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how are you\n",
+      "how are you\n",
+      "how are you\n",
+      "how are you\n",
+      "how are you\n",
+      "how are you\n",
+      "how are you\n"
+     ]
+    }
+   ],
+   "source": [
+    "for names in students:\n",
+    "    print(\"how are you\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f93bb7fa-2e41-4a49-bbb6-6fec8006dbed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n",
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(1,11):\n",
+    "    print(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3574d0ef-2e4b-4e91-b123-22967d82327c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students = [\"mayowa\", \"amanda\", \"segun\", \"jekwu\", \"yinka\",\"chinyere\", \"joachim\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "fca1dda5-8970-433b-9a06-25a0604a290e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How are you mayowa, you are welcome\n",
+      "How are you amanda, you are welcome\n",
+      "How are you segun, you are welcome\n",
+      "How are you jekwu, you are welcome\n",
+      "How are you yinka, you are welcome\n",
+      "How are you chinyere, you are welcome\n",
+      "How are you joachim, you are welcome\n"
+     ]
+    }
+   ],
+   "source": [
+    "for individuals in students:\n",
+    "    print(f\"How are you {individuals}, you are welcome\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1bb6beaf-4e67-4bf8-be5c-535d497b51a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jekwu\n",
+      "joachim\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dudes in students:\n",
+    "    if dudes.startswith(\"j\"):\n",
+    "        print(dudes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4fe50114-ae7a-4aeb-a8d0-226d4f4f5a19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The name doesn't starts with j, this student name is mayowa\n",
+      " The name doesn't starts with j, this student name is amanda\n",
+      " The name doesn't starts with j, this student name is segun\n",
+      "jekwu\n",
+      " The name doesn't starts with j, this student name is yinka\n",
+      " The name doesn't starts with j, this student name is chinyere\n",
+      "joachim\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dudes in students:\n",
+    "    if dudes.startswith(\"j\"):\n",
+    "        print(dudes)\n",
+    "    else:\n",
+    "        print(f\" The name doesn't starts with j, this student name is {dudes}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "8beb9078-3622-494f-97ff-1bfe8331755e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = [2, 5, 8, 23, 9, 4, 7, 2, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c3b0966d-bc1f-43ce-902f-e87e81e515a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in numbers:\n",
+    "    if n > 10:\n",
+    "        print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0fe8a4f7-ea24-4737-bdfd-b3698dfb94bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = [2, 5, 8, 23, 15, 11, 10.5, 9, 4, 7, 2, 1, 10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "b939c96f-67ed-47bb-989e-f9c31646ce71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values_less_than_10 = []\n",
+    "values_greater_equal_than_10 = []\n",
+    "\n",
+    "for numerics in numbers:\n",
+    "    if numerics < 10:\n",
+    "        values_less_than_10.append(numerics)\n",
+    "    else:\n",
+    "        values_greater_equal_than_10.append(numerics)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "dfdaa69c-08f0-4acf-9639-9d048c651089",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 5, 8, 9, 4, 7, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(values_less_than_10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5c55a398-3126-48f8-86c7-b50f15c01747",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 15, 11, 10.5, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(values_greater_equal_than_10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a2c065b-28ab-4493-a7c9-84bf5fcb91b7",
    "metadata": {},
    "outputs": [],
    "source": []
