adding new files

--- a/lesson_2.ipynb
+++ b/lesson_2.ipynb
@@ -1540,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "0550da75-bc82-4934-9c86-dd60d081edec",
    "metadata": {},
    "outputs": [],
@@ -1688,11 +1688,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "9f5f3f2f-0cbd-4941-8cf7-c23fdc78be8d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# to add to a dictionary we use update\n",
     "students.update({\"chukwu\": 24})"
    ]
   },
@@ -1716,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "5fc290f7-ed81-4975-978a-3b64aaddcece",
    "metadata": {},
    "outputs": [
@@ -1726,18 +1727,19 @@
        "11"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "students.pop(\"chinyere\")"
+    "# to remove data from a dictionary by passing the key into the pop method\n",
+    "students.pop(\"chinyere\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "8f0f4739-6143-41cc-a08d-d29a7dc02d1e",
    "metadata": {},
    "outputs": [
@@ -1745,7 +1747,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'mayowa': 50, 'segun': 'boy', 'chukwu': 24}\n"
+      "{'mayowa': 22, 'segun': 23, 'chukwu': 24}\n"
      ]
     }
    ],
@@ -1754,9 +1756,301 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c28640a3-3c23-49a5-9c27-4aad695f34df",
+   "metadata": {},
+   "source": [
+    "#### TUPLES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "65f0ab69-ea8f-4529-aa4e-a1a9eb87219f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_tuple = (\"rand\", \"uju\", \"sanusi\", \"sherif\", \"chika\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "befbf0c2-111a-42b1-869a-0c17c1eb0728",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(my_tuple))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a38e320c-05af-48cb-ab87-58f34b0e5971",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# in order to make changes to a tuple, it is imperative to convert to list first\n",
+    "converted_tuple = list(my_tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "75c23b3d-d460-4b56-8468-52e22eb0411e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['rand', 'uju', 'sanusi', 'sherif', 'chika']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(converted_tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2d25fc41-f1d9-4beb-b318-4b9ccaec58a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_tuple = tuple(converted_tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c8a153b5-4291-496e-bdef-a682b758d519",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(new_tuple))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d2b97023-6a66-40da-94e9-4cb9d0144ef9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('rand', 'uju', 'sanusi', 'sherif', 'chika')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(new_tuple)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f20f8ace-52ea-42fd-9899-cbb83ff84c7d",
+   "metadata": {},
+   "source": [
+    "#### TUPLE UNPACKING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "23374413-c5d1-43a2-a283-49e29bee7731",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = (\"yinka\", \"mayowa\", \"segun\", \"jekwu\", \"amanda\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7039100f-86ce-430c-838d-4cabc42f4950",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(student1, student2, student3, student4, student5) = names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b72cb24d-de11-4e22-ae2c-a6617b9875b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jekwu\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(student4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15801dfb-5bae-4ea4-9225-f1b04c92d226",
+   "metadata": {},
+   "source": [
+    "#### SETS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7dc381d7-75f8-4dc4-a244-29555e28fd90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = {2, 4, 5, 6, 7, 8}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "75dd0cfc-d3fe-428d-b488-e264a0b52ff6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sets only return unique values in the set\n",
+    "test = {2, 3, 4, 4, 5, 7}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "99ea307b-5907-4218-91b1-24d5662a1003",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 5, 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2dfb0395-9f1e-4e18-b81c-19e83191e39f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = {30, 50, 24, 2, 3, 30}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5f69b6f7-1f9f-450c-9ce6-a4731b8dc599",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "07e347fe-63ba-4adc-8511-e1d62e54d75e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# it can be used to remove duplicates from a given list\n",
+    "ist = [\"yinka\", \"mayowa\", \"chichi\", \"seggun\", \"yinka\", \"jekwu\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "35974d3e-4d75-443d-9f52-0420158bc87e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'chichi', 'jekwu', 'mayowa', 'seggun', 'yinka'}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(ist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "71819765-cc4b-45e1-8fc5-464912896d19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "de_duplicate = list(set(ist))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c522b90c-1c53-42a3-8af6-a0967aab0003",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['jekwu', 'chichi', 'yinka', 'mayowa', 'seggun']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(de_duplicate)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42b1121f-138c-4701-8dec-3c36f5f76b5c",
+   "id": "9618206d-68cd-4bf5-b29b-2edf866bef63",
    "metadata": {},
    "outputs": [],
    "source": []
