--- a/Lesson_3.ipynb
+++ b/Lesson_3.ipynb
@@ -205,13 +205,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "65159d30-10da-473d-8f70-a98e3f455d34",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2797015889.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[5], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    if #condition to check:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "if # condition to check:\n",
-    "    # action to perform"
+    "if #condition to check:\n",
+    "    else:\n",
+    "    #condition to perform"
    ]
   },
   {
@@ -459,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "a970899c-b643-4a4c-9d26-5cd6254c7614",
    "metadata": {},
    "outputs": [
@@ -538,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "79a6d7ec-ed98-4e5c-b856-96709d3f644a",
    "metadata": {},
    "outputs": [
@@ -546,8 +556,8 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "what is your name:  yinka\n",
-      "Please provide your magic number:  9\n"
+      "what is your name:   yinka\n",
+      "Please provide your magic number:  14\n"
      ]
     },
     {
@@ -555,7 +565,7 @@
      "output_type": "stream",
      "text": [
       " Please Wait and see if you have the lucky number\n",
-      "Oops, wrong magic number yinka, the correct magic number is 5\n"
+      "Oops, wrong magic number yinka, the correct magic number is 88\n"
      ]
     }
    ],
@@ -911,6 +921,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "39ab86cd-2545-4f77-81ac-a24aa0a3384e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chukwu is a man\n",
+      "chichi is a woman\n",
+      "mayowa is a man\n",
+      "yinka is a woman\n",
+      "segun is a man\n",
+      "amanda's gender is not defined\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using for loop and if statements to unpack dictionaries\n",
+    "\n",
+    "students_bio = {\"chukwu\":\"male\", \"chichi\":\"female\", \"mayowa\":\"male\", \"yinka\":\"female\", \"segun\":\"male\", \"amanda\":\" \"}\n",
+    "\n",
+    "for key, value in students_bio.items():\n",
+    "    if value == \"female\":\n",
+    "        print(f\"{key} is a woman\")\n",
+    "    elif value == \"male\":\n",
+    "        print(f\"{key} is a man\")\n",
+    "    else:\n",
+    "        print(f\"{key}'s gender is not defined\")\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6a51f0bc-df34-47fb-920b-d99f7c71cd9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('chukwu', 'male'), ('chichi', 'female'), ('mayowa', 'male'), ('yinka', 'female'), ('segun', 'male'), ('amanda', ' ')])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check\n",
+    "students_bio.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "id": "8beb9078-3622-494f-97ff-1bfe8331755e",
    "metadata": {},
@@ -1006,6 +1072,242 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5a2c065b-28ab-4493-a7c9-84bf5fcb91b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2801327e-0acd-4f6c-9979-77edc535c4d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(33 % 2)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "65133ac3-8b93-453f-b9ba-815914094918",
+   "metadata": {},
+   "source": [
+    "print(100 % 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "49017214-84f6-4874-8f2a-6e54f9399eac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = [2, 5, 4, 6, 8, 7, 9, 7, 10, 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0ca0582c-5162-4abc-8227-3af8e7bbb3d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "empty_list = []\n",
+    "\n",
+    "for n in numbers:\n",
+    "    if n % 2 == 0:\n",
+    "        empty_list.append(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "11cf7a23-41c2-4fdc-a000-86a16eed4492",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(empty_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3b38f96-fcc1-4ab2-8dbc-4d8791863844",
+   "metadata": {},
+   "source": [
+    "#### CALCULATOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e288160b-db9c-41cb-82fd-6bb91f1edb92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arithmetic_type = input(\"\"\"\n",
+    "what arithmetic do you want to do,\n",
+    "press a for addition,\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a24adc48-2305-47e0-8019-d0414a2defc2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6024312-8711-4a36-921b-e301bff3d97f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff59d6b5-9eae-4bef-987e-96a71d08bb59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47f92fe6-9757-4226-9191-5f01b50aa9a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "294d5b6f-26f8-47ed-b11e-a7f83c3039e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e1e36a9-b8ee-48e9-89d8-a2dcd8958a56",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61d9ec5a-698d-46ad-bfde-b6efc42aced0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d4f2905-8a10-408c-afc0-c4618e8efce5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf570ff3-e432-41bc-9491-0793667c099c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72970be4-f3b2-44ca-8202-daa0ac707886",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "045533af-4375-4e6f-bad4-50346e8291a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "fbcf0ae3-9817-4263-a5d6-7b04e7be6c87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students = [\"amanda\", \"segun\", \"chukwujekwu\", \"yinka\", \"joachim\", \"chinyere\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "6044ecf6-cfbc-4b7d-8c8b-6d6a5df1e657",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "amanda belong to group 1\n",
+      "segun belong to group 1\n",
+      "chukwujekwu belong to group 1\n",
+      "yinka belong to group 2\n",
+      "joachim belong to group 2\n",
+      "chinyere belong to group 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "for name in students:\n",
+    "    print(f\"{name} belong to group {random.randint(1,2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35cae3cf-37ef-4190-9d18-7b3daefdbaf2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9849574-4fe2-4a00-ac87-356c8842cb99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6947ccbd-ea5f-4dac-9ecf-f354e1d33fd3",
    "metadata": {},
    "outputs": [],
    "source": []
