--- a/lesson_1.ipynb
+++ b/lesson_1.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "de2a6d2c-0a2c-42a5-976b-d6a849b08711",
    "metadata": {},
    "outputs": [],
@@ -478,27 +478,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cc1e4f39-35fc-4b97-b4d6-7342a55d06c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56.7\n"
+     ]
+    }
+   ],
    "source": [
     "print(weight)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2683124c-8d86-44c9-9ff3-959033f82ace",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(weight))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d8b5a1b4-1b29-40b2-af4f-f79b6b7b5a35",
    "metadata": {},
    "outputs": [],
@@ -508,27 +524,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b13afcbd-6b90-4883-a286-8180ad1c710a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56.7\n"
+     ]
+    }
+   ],
    "source": [
     "print(cleaned_weight)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5302a0b9-ab68-457e-baba-af66bc61ad42",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(cleaned_weight))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "efac24e3-215f-42f5-9fea-59b1a6e45e0d",
    "metadata": {},
    "outputs": [],
@@ -538,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6049fdfd-bbd9-426c-85d8-a0fb74f48dac",
    "metadata": {},
    "outputs": [],
@@ -548,27 +580,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b6c3abff-5505-455a-abf3-b7ca56eb937a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(new_number)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "345bbb39-514f-412f-a513-4aa521ef4c3a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(new_number))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1ed71097-ebe0-43da-bda5-00f1b1159f8c",
    "metadata": {},
    "outputs": [],
@@ -578,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "34b8dd8d-9ba8-492f-b7a2-1823188e187d",
    "metadata": {},
    "outputs": [],
@@ -588,17 +636,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "47e982a9-6201-45e8-8ec7-249df823e77c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "print(new_x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ef14fe8a-54aa-435d-9c89-cf50ace0916c",
    "metadata": {},
    "outputs": [],
@@ -608,10 +664,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6c03cb74-abff-42d5-9b25-bf8996dc6b0f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "print(rounded_x)"
    ]
@@ -786,32 +850,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "bc4fa415-0752-41cc-9909-5b5990a4cac0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "please what is your age:  16\n"
+     ]
+    }
+   ],
    "source": [
     "question = int(input(\"please what is your age: \"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a521c6c3-f5ad-4392-a904-02223c02c513",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(question))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3644cf29-1052-439b-a4f7-654c352e99d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "new_age = question + 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "10a28ffe-6370-4c86-8bd6-664859793394",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(new_age)"
    ]
   },
   {
@@ -908,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "67e5e909-5b6f-4291-919b-bca221382e3e",
    "metadata": {},
    "outputs": [],
@@ -918,17 +1016,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "1a34a75d-39c5-470d-b88d-3c3db3941e0c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YINKA\n"
+     ]
+    }
+   ],
    "source": [
     "print(name.upper())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "e293fbc4-45b2-45d9-83e6-35c742511736",
    "metadata": {},
    "outputs": [],
@@ -938,17 +1044,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "41b65a52-e011-4eec-bc80-7a5868d0ee1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yinka\n"
+     ]
+    }
+   ],
    "source": [
     "print(name.lower())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "d7b74c37-094f-44bd-8097-1ca6d80e90b7",
    "metadata": {},
    "outputs": [],
@@ -958,17 +1072,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "6fac62d5-1856-4031-b227-991a54d2d85b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print(address.count(\"e\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "685ec143-a8a3-4b47-8d59-e2e3c572c39f",
    "metadata": {},
    "outputs": [],
@@ -978,27 +1100,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "c33019e0-d8d2-487f-b7b0-7d63a4bd01f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(car.startswith(\"B\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "f988f4c1-1d6e-4fd8-a2ee-061a8a93705a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(car.endswith(\"B\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "6ce00446-65b3-49ab-a17a-bf9731203e84",
    "metadata": {},
    "outputs": [],
@@ -1008,17 +1146,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "35a5a412-a521-4724-b404-6658673a03ff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(corrupt_data.isnumeric())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "e7e4c0c1-4732-48c3-b3f8-1e9b331ef0fb",
    "metadata": {},
    "outputs": [],
@@ -1028,17 +1174,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "faede8c0-407f-45d8-8243-e8be8cb75cda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(corrupt_data.isnumeric())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "17a95740-722a-485e-a161-cfffa9fce8b7",
    "metadata": {},
    "outputs": [],
@@ -1048,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "bc54ecd5-4b8b-47e6-bc4e-ee95e513c1f1",
    "metadata": {},
    "outputs": [],
@@ -1058,17 +1212,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "46857080-5f4c-401c-a381-b876fd7de0e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olayinka\n"
+     ]
+    }
+   ],
    "source": [
     "print(correct_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "3ea0446f-0518-441b-823d-7d1e7b3a16d4",
    "metadata": {},
    "outputs": [],
@@ -1078,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "367723a0-caeb-4b27-9a8d-dd79cb30714a",
    "metadata": {},
    "outputs": [],
@@ -1088,17 +1250,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "e280f00b-32a6-4453-b942-bc8556b8973d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ojo\n"
+     ]
+    }
+   ],
    "source": [
     "print(new_name_version)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "6efc1f0a-5c4b-446e-a33b-22d0467f2ed7",
    "metadata": {},
    "outputs": [],
@@ -1108,17 +1278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "255cba72-c8a3-420c-b58d-fc77ba892899",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o jo \n"
+     ]
+    }
+   ],
    "source": [
     "print(name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "244afd92-04ba-41db-9538-ce3e0e322d3f",
    "metadata": {},
    "outputs": [],
@@ -1128,17 +1306,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "b435cd85-e93f-42d9-ad2d-a9500491b477",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ojo\n"
+     ]
+    }
+   ],
    "source": [
     "print(cleaned_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "7f490a94-76ad-4d42-b7da-aa5f02df4227",
    "metadata": {},
    "outputs": [],
@@ -1148,10 +1334,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "3901141f-8e77-4531-851e-5407651487e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unmatched ')' (2236593137.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[45], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(age.replace\"2\", \"9\"))\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
+     ]
+    }
+   ],
    "source": [
     "print(age.replace\"2\", \"9\"))"
    ]
@@ -1204,50 +1399,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "67777087-f61f-4de7-9a19-15bfb3d247e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(10 / 2)  # division"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "f5be3a66-fb20-43ab-af29-f3c7a175fd09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "print(10 // 2) # floor division"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "4037194e-9970-409c-a8c7-5f4a268ee3fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "print(6 % 3) # modulo remainder of any kind of division"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "42d29286-36e7-47a3-8166-3fb0acb6251f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "print(5 % 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "1025542a-4b94-4fa3-a551-1ad5a9c65655",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "print(2 ** 3) # exponentiation raise to power"
    ]
@@ -1262,80 +1497,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "37458b63-5393-4fcc-bd3c-28924951ee62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(2 == 2) # equal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "2dab28e6-3430-4c92-aa9f-1c7039c870d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(2 == \"2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "301dadb4-39f4-4ca0-8182-f8e21a6abefd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(2 == 4) # equal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "6f2e4049-527b-41fd-9d5e-aca7432d7e17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(2 != 5) # not equal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "a409e67d-d3dc-49c6-a170-9d44c445f19b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(2 > 4) # greater than"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "03997a1b-1f47-4d0a-8f9a-36d22aa0d3e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(2 < 4) # less than"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "8f037282-124e-405c-9800-4c38f0cc35a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(2 <= 2) # less or equal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "9af2c579-cd81-42d6-97a1-436a508890dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(10 >= 20)"
    ]
