adding notes on for loop, while loop, break

--- a/Assignment_4.ipynb
+++ b/Assignment_4.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "320d0d48-3f2e-4d3d-8fc7-f7fb0096eaed",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "id": "e6a7ddd5-b68a-4e15-ac44-b996adaa8380",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "579dd195-6653-474c-9eb1-f1add4237d6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "361062ed-a629-4903-a9c5-69bfced7eb2f",
    "metadata": {},
    "outputs": [
@@ -73,21 +89,45 @@
     "# using the if statements to set the 2nd possiblity\n",
     "\n",
     "elif is_raining == True and is_traffic == False:\n",
-    "    normal_commute_time_1 = normal_commute_time + 10\n",
-    "    print(f\"It is raining but there is no traffic, The total commute time from MM2  to Lekki will be {normal_commute_time_1} minutes.\")\n",
+    "    normal_commute_time = normal_commute_time + 10\n",
+    "    print(f\"It is raining but there is no traffic, The total commute time from MM2  to Lekki will be {normal_commute_time} minutes.\")\n",
     "\n",
     "# using the if statements to set the 3rd possiblity\n",
     "    \n",
     "elif is_raining == False and is_traffic == True:\n",
-    "    normal_commute_time_2 = normal_commute_time + 20\n",
-    "    print(f\"It is not raining but there is no traffic, the total commute time from MM2  to Lekki will be {normal_commute_time_2} minutes.\")\n",
+    "    normal_commute_time = normal_commute_time + 20\n",
+    "    print(f\"It is not raining but there is no traffic, the total commute time from MM2  to Lekki will be {normal_commute_time} minutes.\")\n",
     "\n",
     "# using the if statements to set the 4th possiblity\n",
     "\n",
     "else:\n",
-    "    normal_commute_time_3 = normal_commute_time + 30\n",
-    "    print(f\"It is raining and there is traffic, the total commute time from MM2  to Lekki will be {normal_commute_time_3} minutes.\")"
+    "    normal_commute_time = normal_commute_time + 30\n",
+    "    print(f\"It is raining and there is traffic, the total commute time from MM2  to Lekki will be {normal_commute_time} minutes.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e041f413-fbf5-4327-97bd-70a930fdcf85",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "089f34f5-8cda-46c3-9184-971e67da2e41",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88bf286c-7edd-4ce6-a397-b73ea1543e6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -111,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "449fb294-1e25-4bf8-9744-d17bc0123851",
    "metadata": {},
    "outputs": [
@@ -119,9 +159,9 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter your full name:  Ojo oluwayinka\n",
+      "Enter your full name:  Ojo Oluwayinka\n",
       "Are you currently employed? (yes or no)  yes\n",
-      "enter your annual salary:  700000\n"
+      "enter your annual salary:  600000\n"
      ]
     },
     {
@@ -129,7 +169,7 @@
      "output_type": "stream",
      "text": [
       "Please wait while we confirm eligibility for the loan application\n",
-      "congratulations Ojo oluwayinka, your loan has been approved!!!.\n"
+      "congratulations Ojo Oluwayinka, your loan has been approved!!!.\n"
      ]
     }
    ],
@@ -145,7 +185,7 @@
     "\n",
     "time.sleep(3)\n",
     "\n",
-    "if is_employed == True and salary >= salary_threshold :\n",
+    "if is_employed == True and salary > salary_threshold :\n",
     "    print(f\"congratulations {cust_name}, your loan has been approved!!!.\")\n",
     "else:\n",
     "    print(f\"We are sorry {cust_name}, your loan was not approved. you do not meet the requirements.\")\n",
