--- a/Lesson_3.ipynb
+++ b/Lesson_3.ipynb
@@ -1069,16 +1069,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a2c065b-28ab-4493-a7c9-84bf5fcb91b7",
+   "cell_type": "markdown",
+   "id": "ab4ec1cf-255a-401f-9b66-a0d8d0735e86",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### MODULO USAGE %"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "2801327e-0acd-4f6c-9979-77edc535c4d9",
    "metadata": {},
    "outputs": [
@@ -1095,9 +1095,19 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "65133ac3-8b93-453f-b9ba-815914094918",
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "18848297-3fd3-4382-a714-26a629dc227e",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "print(100 % 2)"
    ]
@@ -1114,33 +1124,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "0ca0582c-5162-4abc-8227-3af8e7bbb3d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "empty_list = []\n",
-    "\n",
-    "for n in numbers:\n",
-    "    if n % 2 == 0:\n",
-    "        empty_list.append(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "11cf7a23-41c2-4fdc-a000-86a16eed4492",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 4, 6, 8, 10]\n"
+      "[2, 4, 6, 8, 10, 76]\n"
      ]
     }
    ],
    "source": [
+    "# create a list of number\n",
+    "\n",
+    "numbers = [2, 5, 4, 6, 8, 7, 9, 7, 10, 5, 7.2, 47, 76]\n",
+    "# using for loop, if statements and the modulo opertaor to pick out the even numbers\n",
+    "\n",
+    "empty_list = []\n",
+    "\n",
+    "for i in numbers:\n",
+    "    if i % 2 == 0:\n",
+    "        empty_list.append(i)\n",
+    "        \n",
     "print(empty_list)"
    ]
   },
@@ -1149,105 +1156,186 @@
    "id": "f3b38f96-fcc1-4ab2-8dbc-4d8791863844",
    "metadata": {},
    "source": [
-    "#### CALCULATOR"
+    "####  Create a Simple CALCULATOR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e288160b-db9c-41cb-82fd-6bb91f1edb92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "What arithmetic opertaion, do you want to do?\n",
+      "press a for Addition\n",
+      "press m for Multiplication\n",
+      "press s for Subtraction\n",
+      "press d for Division:  d\n",
+      "please input your first number:  9\n",
+      "please input your second number:  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.25\n"
+     ]
+    }
+   ],
    "source": [
     "arithmetic_type = input(\"\"\"\n",
-    "what arithmetic do you want to do,\n",
-    "press a for addition,\n"
+    "What arithmetic opertaion, do you want to do?\n",
+    "press a for Addition\n",
+    "press m for Multiplication\n",
+    "press s for Subtraction\n",
+    "press d for Division: \"\"\").lower()\n",
+    "\n",
+    "# recieve the two numbers to be operated on\n",
+    "first_num = int(input(\"please input your first number: \"))\n",
+    "second_num = int(input(\"please input your second number: \"))\n",
+    "\n",
+    "# use if statement to check the operator selected\n",
+    "if arithmetic_type == \"a\":\n",
+    "    print(first_num + second_num)\n",
+    "elif arithmetic_type == \"m\":\n",
+    "    print(first_num * second_num)\n",
+    "elif arithmetic_type == \"s\":\n",
+    "    print(first_num - second_num)\n",
+    "else:\n",
+    "    result = first_num / second_num\n",
+    "    if str(result).endswith(\".0\"):\n",
+    "        print(int(result))\n",
+    "    else:\n",
+    "        print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a24adc48-2305-47e0-8019-d0414a2defc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14, 24, 32, 22, 16, 36]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# nested if statements\n",
+    "nums = [2, 5, 10, 14, 17, 24, 32, 22, 16, 36]\n",
+    "even_num = []\n",
+    "for i in nums:\n",
+    "    if i > 10:\n",
+    "        if i % 2 == 0:\n",
+    "            even_num.append(i)\n",
+    "\n",
+    "print(even_num)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fb169e7-124b-45e2-9f5d-1049b6cfb3d4",
+   "metadata": {},
+   "source": [
+    "### While loop "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ff59d6b5-9eae-4bef-987e-96a71d08bb59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using while loop\n",
+    "x = 5\n",
+    "\n",
+    "while x < 10:\n",
+    "    x += 1\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f386033-4d39-413b-9fd5-eff7c227fd9d",
+   "metadata": {},
+   "source": [
+    "### Break, Continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "294d5b6f-26f8-47ed-b11e-a7f83c3039e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yinka\n",
+      "mayowa\n",
+      "amanda\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = [\"yinka\", \"mayowa\", \"chichi\", \"segun\", \"amanda\", \"chukwu\"]\n",
+    "\n",
+    "for i in names:\n",
+    "    if \"a\" in i:\n",
+    "        print(i)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5e1e36a9-b8ee-48e9-89d8-a2dcd8958a56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yinka\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = [\"yinka\", \"mayowa\", \"chichi\", \"segun\", \"amanda\", \"chukwu\"]\n",
+    "\n",
+    "for i in names:\n",
+    "    if \"a\" in i:\n",
+    "        print(i)\n",
+    "        break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a24adc48-2305-47e0-8019-d0414a2defc2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6024312-8711-4a36-921b-e301bff3d97f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff59d6b5-9eae-4bef-987e-96a71d08bb59",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47f92fe6-9757-4226-9191-5f01b50aa9a4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "294d5b6f-26f8-47ed-b11e-a7f83c3039e0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e1e36a9-b8ee-48e9-89d8-a2dcd8958a56",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61d9ec5a-698d-46ad-bfde-b6efc42aced0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d4f2905-8a10-408c-afc0-c4618e8efce5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf570ff3-e432-41bc-9491-0793667c099c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72970be4-f3b2-44ca-8202-daa0ac707886",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "045533af-4375-4e6f-bad4-50346e8291a9",
+   "id": "1f8fe0e4-1fa0-4459-9582-3ac8d5abdf50",
    "metadata": {},
    "outputs": [],
    "source": []
